<resources>
    <string name="app_name">SewIt</string>
    <string name="welcome_text">Welcome to SewIt!</string>
    <string name="user_name">Username</string>
    <string name="phone_number">Contact number</string>
    <string name="login_text">Login</string>
    <string name="login_btn_text">Login</string>
    <string name="register_btn_text">Register</string>
    <string name="tailor_text">Tailor</string>
    <string name="customer_text">Customer</string>
    <string name="aha_text">Already have an account ?</string>
    <string name="forgot_pass_text">Forgot Password ?</string>
    <string name="signUp_text">Don\'t have an account ?  Sign Up</string>
    <string name="signup_text">Sign Up</string>
    <string name="RseSet_password">ReSet Password</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="create_new_request">Create new request</string>
    <string name="accepted_requests">Accepted requests</string>
    <string name="order_status">Order status</string>
    <string name="more">More</string>
    <string name="new_requests">New requests</string>
    <string name="new_orders">New orders</string>
    <string name="finished_orders">Finished orders</string>
    <string name="acc_details">Account details</string>
    <string name="update_location">Update location</string>
    <string name="logout">Logout</string>
    <string name="body_measurements">Update body measurements</string>
    <string name="null_data">null</string>
    <string name="location">Location</string>
    <string name="lat">latitude</string>
    <string name="lng">longitude</string>
    <string name="address">Address</string>
    <string name="neck">Neck size</string>
    <string name="shoulder_length">Shoulder length</string>
    <string name="sleeve_length">Sleeve length</string>
    <string name="waist">Waist</string>
    <string name="chest">Chest / Bust</string>
    <string name="hip">Hip</string>
    <string name="calf">Calf</string>
    <string name="wrist">Wrist</string>
    <string name="center_back">Center back</string>
    <string name="crotch_length">Crotch length</string>
    <string name="inseam">Inseam</string>
    <string name="out_seam">OutSeam</string>
    <string name="save">Save</string>
    <string name="enter_details">Enter details</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_note">Add note (Material, color, loose or tight, etc.)</string>
    <string name="select_item">Select item</string>
    <string-array name="items">
        <item>Shirt (Short sleeve)</item>
        <item>Shirt (Long sleeve)</item>
        <item>T-shirt (Short sleeve)</item>
        <item>T-shirt (Long sleeve)</item>
        <item>Pants</item>
        <item>Shorts</item>
        <item>Salwar</item>
        <item>Blouse</item>
    </string-array>
    <string name="add_photo">Photos (click in the box to upload image)</string>
    <string name="add_measurements">Add body measurements</string>
    <string name="place_request">Place request</string>
    <string name="request_id">Request ID:</string>
    <string name="item">Item:</string>
    <string name="from">From:</string>
    <string name="distance">Distance:</string>
    <string name="order_id">Order ID:</string>
    <string name="acc_username">Username:</string>
    <string name="acc_email">Email:</string>
    <string name="acc_phone">Phone number:</string>
    <string name="acc_lat">Latitude:</string>
    <string name="acc_lng">Longitude:</string>
    <string name="acc_address">Address:</string>
    <string name="created_at">Created at:</string>
    <string name="km_text">km</string>
    <string name="req_details">Request details</string>
    <string name="contact_number">Contact number:</string>
    <string name="_gender">Gender:</string>
    <string name="requested_item">Requested item:</string>
    <string name="req_body_measurements">Body measurements</string>
    <string name="req_neck">Neck size:</string>
    <string name="req_shoulder">Shoulder length:</string>
    <string name="req_sleeve">Sleeve length:</string>
    <string name="req_chest">Chest/Bust:</string>
    <string name="req_waist">Waist:</string>
    <string name="req_hip">Hip:</string>
    <string name="req_crotch">Crotch length:</string>
    <string name="req_center_back">Center back:</string>
    <string name="req_calf">Calf:</string>
    <string name="req_wrist">Wrist:</string>
    <string name="req_inseam">Inseam:</string>
    <string name="req_out_seam">OutSeam:</string>
    <string name="note">Note:</string>
    <string name="photo">Photo:</string>
    <string name="created">Created at:</string>
    <string name="price">Enter price</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="req_distance">Distance:</string>
    <string name="to">To:</string>
    <string name="filter">Filter</string>
    <string name="max">Max.</string>
    <string name="distance_text">Distance</string>
    <string name="price_text">Price</string>
    <string name="price_col">Price:</string>
    <string name="accepted_at">Accepted at:</string>
    <string name="place_order">Place order</string>
    <string name="tailor_name">Tailor name:</string>
    <string name="customer_name">Customer name:</string>
    <string name="order_details">Order details</string>
    <string name="add_location">Add location</string>
    <string name="order_placed_at">Order placed at:</string>
    <string name="tailor_">Tailor:</string>
    <string name="customer_">Customer:</string>
    <string name="order_finished_at">Order finished at:</string>
    <string name="status">Status:</string>
    <string name="show_location">Show location</string>
    <string name="delivered">Delivered</string>
    <string name="note_inches">Note:  All measurements are in inches</string>
    <string name="feedback">Feedback</string>
    <string name="rating">Rating:</string>
    <string name="zero">0</string>
    <string name="blouse_length">Blouse length</string>
    <string name="arm_hole">Armhole</string>
    <string name="lower_bust">Lower bust</string>
    <string name="front_neck_depth">Neck front</string>
    <string name="back_neck_depth">Neck back</string>
    <string name="sleeve_width">Sleeve width</string>
    <string name="bicep_around">Bicep around</string>
    <string name="shirt_length">Shirt length</string>
    <string name="short_length">Shorts length</string>
    <string name="tShirt_length">TShirt length</string>
    <string name="thigh_around">Thigh around</string>
    <string name="leg_opening">Leg opening</string>
    <string name="knee_around">Knee around</string>
    <string name="bottom">Bottom</string>
    <string name="around_above_waist">Around above waist</string>
    <string name="kameez_length">Kameez length</string>
    <string name="salwar_length">Salwar length</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_show_location">MapsShowLocation</string>
</resources>